deployment-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: person-kube-app
spec:
  selector:
    app: person-kube-app
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: person-kube-deploy
    app: person-kube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-kube-app
  template:
    metadata:
      labels:
        app: person-kube-app
    spec:
      containers:
        - name: person-kube-container
          image: "710473750744.dkr.ecr.us-east-2.amazonaws.com/prestamosms"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
