deployment_1ms_nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: testing-kube-service-np
  labels:
    name: testing-kube-deploy
    app: testing-kube-app
spec:
  type: NodePort
  selector:
    app: testing-kube-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30072
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testing-kube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing-kube-app
  template:
    metadata:
      labels:
        app: testing-kube-app
    spec:
      containers:
        - name: testing-kube-container
          image: "710473750744.dkr.ecr.us-east-2.amazonaws.com/prestamosms"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
