deployment_4ms_ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: loans-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
   rules:
  - http:
      paths:
      - path: /person
        pathType: Prefix
        backend:
          service:
            name: person-kube-app
            port:
              number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: person-kube-deploy
    app: person-kube-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: person-kube-app
  template:
    metadata:
      labels:
        app: person-kube-app
    spec:
      containers:
        - name: person-kube-container
          image: "710473750744.dkr.ecr.us-east-2.amazonaws.com/person"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
